feat: fold the host-BLAS backend into koblas, drop the JVM openblas module, route long level-1 runs to the host